# saddle-rendering-toon-shader

./: .gitignore  Cargo.toml  README.md  __data.json  index.html
_app/: version.json
_app/immutable/chunks/: BVjGYZjG.js  BXkdYjJM.js  C5rQ6X5t.js  C6qhwanK.js  ufeYalwX.js
_app/immutable/entry/: app.DsDc9Zhl.js  start.CoiGYHRu.js
_app/immutable/nodes/: 0.BfFlvH5L.js  1.DKOgkax3.js  2.DBvLyREX.js  3.F-LJbKBt.js  4.kQo22B-O.js
demo/basic/: index.html
demo/gltf_replace/: index.html
demo/lab/: index.html
demo/outline_optional/: index.html
demo/ramps/: index.html
demo/rim_specular/: index.html
demo/showcase/: index.html
demos/basic/: index.html
demos/basic/assets/: README.md
demos/gltf_replace/: index.html
demos/outline_optional/: index.html
demos/ramps/: index.html
demos/rim_specular/: index.html
demos/showcase/: index.html
docs/: architecture.md  configuration.md  migration.md
docs/architecture/: __data.json  index.html
docs/architecture.md/: index.html
docs/configuration/: __data.json  index.html
docs/configuration.md/: index.html
docs/migration/: __data.json  index.html
examples/: Cargo.toml
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/common/: Cargo.toml
examples/common/src/: lib.rs  sample_looks.rs
examples/gltf_replace/: Cargo.toml
examples/gltf_replace/src/: main.rs
examples/lab/: Cargo.toml  README.md
examples/lab/src/: e2e.rs  main.rs  scenarios.rs
examples/outline_optional/: Cargo.toml
examples/outline_optional/src/: main.rs
examples/ramps/: Cargo.toml
examples/ramps/src/: main.rs
examples/rim_specular/: Cargo.toml
examples/rim_specular/src/: main.rs
examples/showcase/: Cargo.toml
examples/showcase/src/: main.rs
src/: components.rs  lib.rs  material.rs  material_tests.rs  plugin.rs  scene_replace.rs  systems.rs  systems_tests.rs  utils.rs
src/shaders/: toon_shader.wgsl
