[package]
name = "saddle-rendering-toon-shader"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-rendering-toon-shader"
license = "MIT-0"
description = "Configurable toon and cel shading for Bevy PBR scenes"

[dependencies]
bevy = "0.18"

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
