[workspace]
members = [
    "common",
    "basic",
    "ramps",
    "gltf_replace",
    "rim_specular",
    "showcase",
    "outline_optional",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-rendering-toon-shader = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
